--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router": "^7.5.1",
     "react-scroll-trigger": "^0.6.14",
     "react-spinners": "^0.16.1",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
