--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scroll-trigger": "^0.6.14",
     "react-spinners": "^0.16.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
